--- a/home/AppData/Roaming/RStudio/config.json
+++ b/home/AppData/Roaming/RStudio/config.json
@@ -14,7 +14,7 @@
 			"y": 0,
 			"width": 1219,
 			"height": 657,
-			"maximized": false
+			"maximized": true
 		},
 		"accessibility": false,
 		"disableRendererAccessibility": false
