--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -39,6 +39,8 @@ import Data.List
 :seti -XDefaultSignatures
 :seti -XDisambiguateRecordFields
 :seti -XDuplicateRecordFields
+:seti -XStandaloneKindSignatures
+
 -- https://codetalk.io/posts/2020-04-05-common-json-patterns-in-haskell-rust-and-javascript.html#get-a-field
 -- Allows us to have multiple record fields of the same name in scope. Prepend name with '#'.
 :seti -XOverloadedLabels
