Update ghci config.

--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -39,7 +39,10 @@ import Data.List
 :seti -XDefaultSignatures
 :seti -XDisambiguateRecordFields
 :seti -XDuplicateRecordFields
+
+-- https://serokell.io/blog/type-families-haskell#injective-type-families
 :seti -XStandaloneKindSignatures
+:seti -XTypeFamilyDependencies
 
 -- https://codetalk.io/posts/2020-04-05-common-json-patterns-in-haskell-rust-and-javascript.html#get-a-field
 -- Allows us to have multiple record fields of the same name in scope. Prepend name with '#'.
