--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -68,3 +68,5 @@ import Data.List
 
 -- https://alt-romes.github.io/posts/2023-11-30-computed-properties-for-haskell-records.html
 :seti -XOverloadedRecordDot
+
+:seti -XBlockArguments
