Add color scheme to wt.

--- a/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
@@ -123,6 +123,7 @@
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
+                "colorScheme": "Tango Dark",
                 "font": 
                 {
                     "face": "MonaspiceKr Nerd Font Mono"
@@ -229,6 +230,29 @@
             "selectionBackground": "#FFFFFF",
             "white": "#CCCCCC",
             "yellow": "#C19C00"
+        },
+        {
+            "background": "#0E1214",
+            "black": "#16181C",
+            "blue": "#263C50",
+            "brightBlack": "#404146",
+            "brightBlue": "#0F829D",
+            "brightCyan": "#484040",
+            "brightGreen": "#9CD750",
+            "brightPurple": "#EB5F6A",
+            "brightRed": "#DD4E21",
+            "brightWhite": "#EFEAD9",
+            "brightYellow": "#FFD072",
+            "cursorColor": "#DD4E21",
+            "cyan": "#4D2D2C",
+            "foreground": "#D0C6A5",
+            "green": "#52A260",
+            "name": "Darcubox",
+            "purple": "#CD80B9",
+            "red": "#D01C26",
+            "selectionBackground": "#25262C",
+            "white": "#8F8682",
+            "yellow": "#E6A96B"
         },
         {
             "background": "#300A24",
