Update Windows Terminal settings.

--- a/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
@@ -124,8 +124,10 @@
             },
             {
                 "colorScheme": "Tango Dark",
+                "experimental.retroTerminalEffect": false,
                 "font": 
                 {
+                    "builtinGlyphs": true,
                     "face": "MonaspiceKr Nerd Font Mono"
                 },
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
